# chomp

./: Makefile  README.md  chomp.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  build-and-publish.yml  build.yml  pytest.yml
bash_completion/: chomp.sh
chomp/: chomp.py  commands.py  data_manager.py  food.py  utils.py
chomp/commands/: __init__.py  cook.py  eat.py  measure.py  stats.py  today.py
docs/: nutritional_data_schema.md
tests/: test_commands.py
