[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chomp"
version = "0.0.1"
description = "Calorie-counting app"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent"
]
dependencies = [
    "pyyaml",
    "openfoodfacts"
]

[project.scripts]
chomp = "chomp.chomp:main"
